# bg3dppd-models

./: README.md  pyproject.toml
docs/: solved_issues.md
src/models/: build_spacy_train_data.py  config.cfg  preprocess.py
src/models/data/: converted_01.jsonl  samples_01.jsonl  train_01.spacy
src/models/utils/: train.spacy  trainset_builder.py
src/models/utils/data/: annotated_trainset_v1.jsonl  samples.json
